# sticky

./: .gitignore  DBUS-CLI-calls.md  Makefile  README.md  dbus-test  generate_desktop_files  makepot  meson.build  sticky.pot  test  test-init
data/: meson.build  org.x.sticky.service  org.x.sticky.service.in  sticky.desktop.in
debian/: changelog  control  copyright  rules
etc/xdg/autostart/: sticky.desktop
meson/: meson-postinstall.sh
po/: LINGUAS  am.po  ar.po  be.po  bg.po  bn.po  br.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  ko.po  la.po  lo.po  (+83 more)
usr/lib/sticky/: DBUS-CLI-calls.md  common.py  manager.py  names.py  note_buffer.py  sticky.py  stickycli.py  stickynotes.py  undobuffer.py  util.py
usr/share/applications/: sticky.desktop
usr/share/glib-2.0/schemas/: org.x.sticky.gschema.xml
usr/share/sticky/: manager.ui  sticky.css
